force-app/main/default/objects/Child_Episode__c/Child_Episode__c.object-meta.xml
<CustomObject>
    <label>Child Episode</label>
    <nameField>
        <label>Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>