force-app/main/default/objects/Child_Episode__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>