force-app/main/default/objects/Child_Episode__c/fields/Court_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Court_Hearing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court Hearing</label>
    <referenceTo>Court_Hearing__c</referenceTo>
    <relationshipName>Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>