force-app/main/default/objects/Child_Episode__c/fields/Discharge_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Reason__c</fullName>
    <label>Discharge Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Reunification with Parents</fullName>
            </value>
            <value>
                <fullName>Provider Not a Good Fit</fullName>
            </value>
            <value>
                <fullName>Runaway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>