force-app/main/default/objects/Child_Episode__c/fields/Ongoing_Case__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipName>Episodes1</relationshipName>
    <type>Lookup</type>
</CustomField>