force-app/main/default/objects/Child_Episode__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrary to the Welfare of the Child</fullName>
            </value>
            <value>
                <fullName>Reasonable Efforts</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement</fullName>
            </value>
            <value>
                <fullName>Best Interests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>