force-app/main/default/objects/Child_Episode__c/fields/Removal_Type__c.field-meta.xml
<CustomField>
    <fullName>Removal_Type__c</fullName>
    <label>Removal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Judicial Removal</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Removal</fullName>
            </value>
            <value>
                <fullName>Emergency Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>