force-app/main/default/objects/Child_Episode__c/fields/Removed_From__c.field-meta.xml
<CustomField>
    <fullName>Removed_From__c</fullName>
    <label>Removed From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Removed from Home (Parents)</fullName>
            </value>
            <value>
                <fullName>Specified Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>